--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7940,6 +7940,10 @@ ul.benifits-col li i{
 }
 .pic1{
 	width:250px;
-	height:250px;
-	background-size:100% 100%;
+	height:186px;
+	}
+.look{
+	width:288px;
+	height:81px;
+	
 }
